fixed album not displaying last displayed image on album change and tweakes to the header display on small devices

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,6 +85,9 @@
   .fb-image div {
     text-align: center;
   }
+  .header {
+    margin-bottom: 10px;
+  }
 }
 
 .fb-hours div {
